Güncelleme: kelime anlamları eklendi.

--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -816,3 +816,9 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
 [data-resim~="yuvarlak-1"]{border-radius:5px;}
 [data-resim~="yuvarlak-2"]{border-radius:8px;}
 [data-resim~="yuvarlak-3"]{border-radius:10px;}
+
+
+/* KELİMELER VE ANLAMLARI */
+/* İLKER: İlk, önce, başta */
+/* TEKER: Tek, yalnız, sadece */
+/* SONER: Son, sonra, sonda */
