--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -818,7 +818,7 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
 [data-resim~="yuvarlak-3"]{border-radius:10px;}
 
 
-/* KELİMELER VE ANLAMLARI */
+/* SÖZCÜKLER VE ANLAMLARI */
 /* İLKER: İlk, önce, başta */
 /* TEKER: Tek, yalnız, sadece */
 /* SONER: Son, sonra, sonda */
