Eşit bölme menüsü eklendi.

--- a/_includes/icerik.html
+++ b/_includes/icerik.html
@@ -4,6 +4,8 @@
   <li><a href="/belgeler/kap-orgusu.html">Kap Örgüsü</a>
     <ul>
       <li><a href="/belgeler/kap-orgusu/olcekler.html">Ölçekler</a>
+      <li><h5 data-metin="ana gri">Örnekler</h5></li>
+      <li><a href="/belgeler/ornekler/kap-orgusu-esit-bolme.html">Eşit Bölme (1)</a>
     </ul>
   </li>
   <li><a href="/belgeler/renk-orgusu.html">Renk Örgüsü</a></li>
