--- a/_includes/icerik.html
+++ b/_includes/icerik.html
@@ -5,7 +5,8 @@
     <ul>
       <li><a href="/belgeler/kap-orgusu/olcekler.html">Ölçekler</a>
       <li><h6 data-metin="ana gri">Örnekler</h6></li>
-      <li><a href="/belgeler/ornekler/kap-orgusu-esit-bolme.html">Eşit Bölme (1)</a>
+      <li><a href="/belgeler/ornekler/kap-orgusu-esit-bolme.html">Eşit Bölme #1</a></li>
+      <li><a href="/belgeler/ornekler/kap-orgusu-esit-bolme-2.html">Eşit Bölme #2</a></li>
     </ul>
   </li>
   <li><a href="/belgeler/renk-orgusu.html">Renk Örgüsü</a></li>
