--- a/assets/css/deveb.genel.css
+++ b/assets/css/deveb.genel.css
@@ -151,9 +151,10 @@ transition: .3s all;}
 		color: #fff !important;
 		background: #2c2171;
 		border-radius: 40px;
-		-webkit-transition: .3s all;
--o-transition: .3s all;
-transition: .3s all;
+		transition: .3s all;
+			-webkit-transition: .3s all;
+			-o-transition: .3s all;
+		text-decoration: underline;
 	}
 /* ==========================================================================
     METİN
