--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -116,11 +116,11 @@
         -webkit-margin-end: 0px;
       color:#333;
     }
-    h1{font-size:2em}
-      h2{font-size:1.8em}
-        h3{font-size:1.6em}
-          h4{font-size:1.4em}
-            h5{font-size:1.2em}
+    h1{font-size:1.5em; margin: 0.67em 0;}
+      h2{font-size:1.4em}
+        h3{font-size:1.3em}
+          h4{font-size:1.2em}
+            h5{font-size:1.1em}
               h6{font-size:1.0em}
 
     img {
