--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -117,7 +117,7 @@
       color:#333;
     }
     h1{font-size:1.5em; margin: 0.67em 0;}
-      h2{font-size:1.4em}
+      h2{font-size:1.4em; margin: 0.57em 0;}
         h3{font-size:1.3em}
           h4{font-size:1.2em}
             h5{font-size:1.1em}
