--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -117,11 +117,11 @@
       color:#333;
     }
     h1{font-size:1.5em; margin: 0.67em 0;}
-      h2{font-size:1.4em; margin: 0.57em 0;}
-        h3{font-size:1.3em}
-          h4{font-size:1.2em}
-            h5{font-size:1.1em}
-              h6{font-size:1.0em}
+      h2{font-size:1.1em; margin: 0.67em 0;}
+        h3{font-size:1.1em; color:#555;}
+          h4{font-size:1.0em; color:#888;}
+            h5{font-size:1.0em; color: #999;}
+              h6{font-size:1.0em; color: #aaa;}
 
     img {
       border: 0;  /* Kenarlıkları sıfırlama */
