--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -115,14 +115,14 @@
         -webkit-margin-start: 0px;
         -webkit-margin-end: 0px;
       color:#333;
-      margin: 0.67em 0;
+      margin: 0.80em 0 0.67em 0;
     }
     h1{font-size:1.5em;}
       h2{font-size:1.1em;}
-        h3{font-size:1.1em; color:#555;}
-          h4{font-size:1.0em; color:#888;}
-            h5{font-size:1.0em; color: #999;}
-              h6{font-size:1.0em; color: #aaa;}
+        h3{font-size:1.1em; font-weight: 500;}
+          h4{font-size:1.0em; font-weight: 500; color:#444;}
+            h5{font-size:1.0em; font-weight: 500; color: #666;}
+              h6{font-size:1.0em; font-weight: 500; color: #888;}
 
     img {
       border: 0;  /* Kenarlıkları sıfırlama */
