--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -117,6 +117,7 @@
       color:#333;
       margin: 2em 0 0.5em 0;
     }
+    h1:first-child{margin-top:0;}
     h1{font-size:1.5em}
       h2{font-size:1.1em}
         h3{font-size:1.1em}
