--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -124,7 +124,9 @@
           h4{font-size:1.0em; font-weight: 500; color:#444;}
             h5{font-size:1.0em; font-weight: 500; color: #666;}
               h6{font-size:1.0em; font-weight: 300; color: #888;}
-
+              h1 + h2, h2 + h3, h3 + h4, h4 + h5, h5 + h6{
+                margin-top: 1em;
+              }
     img {
       border: 0;  /* Kenarlıkları sıfırlama */
     }
