--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -117,7 +117,12 @@
       color:#333;
       margin: 2em 0 0.5em 0;
     }
-    h1:first-child{margin-top:0;}
+    * > h1:first-child,
+    * > h2:first-child,
+    * > h3:first-child,
+    * > h4:first-child,
+    * > h5:first-child,
+    * > h6:first-child, {margin-top:0;}
     h1{font-size:1.5em}
       h2{font-size:1.1em}
         h3{font-size:1.1em}
