--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   <div data-gnl="24" class="header">
   {% include header.html %}
   </div>
-  <div data-gnl="23">
+  <div data-gnl="23 kaplama">
     <div data-gnl="24" data-ort="3">
     {% include icerik.html %}
     </div>
