--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <div id="header" data-gnl="24 24p ortada göbekte" class="ap-beyaz beri-alt-1 kenar-alt" style="min-height:60px;">
-  <div data-gnl="23 ger göbekte">
+  <div data-gnl="23 kaplama ger göbekte">
     <ul class="menü-genel" data-gnl="0 göbekte">
       <li><a href="https://data-deveb.github.io" class="logo">deveb</a></li>
     </ul>
