--- a/assets/css/deveb.genel.css
+++ b/assets/css/deveb.genel.css
@@ -245,6 +245,8 @@ ul.liste-temiz li{
 [data-menü~="basamak"] li a{
 
 }
-[data-menü~="basamak"] li a:active{
-	border-left:3px solid #2c2171;
+[data-menü~="basamak"] li{
+	border-left:3px solid #abcdef;
 }
+[data-menü~="basamak"] li+ ul > li:first-child
+{margin-top:10px;}
