--- a/assets/css/deveb.genel.css
+++ b/assets/css/deveb.genel.css
@@ -242,11 +242,8 @@ ul.liste-temiz li{
 [data-menü~="basamak"] li{
 	padding:10px 0 10px 10px;
 }
-[data-menü~="basamak"] li a{
-
-}
 [data-menü~="basamak"] li{
 	border-left:3px solid #abcdef;
 }
-[data-menü~="basamak"] li+ ul > li:first-child
-{margin-top:10px;}
+[data-menü~="basamak"] li+ ul > li:first-child{
+	margin-top:10px;}
