--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@
   <div data-gnl="24" class="header">
   {% include header.html %}
   </div>
-  <div data-gnl="23">
+  <div data-gnl="23 kaplama">
   {{ content }}
   </div>
   <div data-gnl="24">
