--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
       <li><a href="https://data-deveb.github.io" class="logo">deveb</a></li>
     </ul>
     <ul class="menü-genel" data-gnl="0 göbekte">
-      <li><a href="https://data-deveb.github.io/belgeler/kurulum.html">Belgeler</a></li>
+      <li><a href="https://data-deveb.github.io/belgeler/deveb.html">Belgeler</a></li>
       <!--<li><a href="belgeler/kap-orgusu/ornekler.html">Kap Örnekleri</a></li>
       <li><a href="https://data-deveb.github.io/belgeler/sekme-orgusu.html">Sekme</a></li>
       <li><a href="https://data-deveb.github.io/belgeler/resim-orgusu.html">Resim</a></li>-->
