--- a/_includes/icerik.html
+++ b/_includes/icerik.html
@@ -1,5 +1,6 @@
 <ul data-menü="basamak">
   <li><h3 data-metin="ana gri">Belgeler</h3></li>
+  <li><a href="/belgeler/deveb.html">Giriş</a></li>
   <li><a href="/belgeler/kurulum.html">Kurulum</a></li>
   <li><a href="/belgeler/kap-orgusu.html">Kap Örgüsü</a>
     <ul>
