--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<div id="header" data-gnl="24 24p ortada göbekte" class="ap-beyaz beri-alt-1 kenar-alt" style="min-height:60px;">
+<div id="header" data-gnl="24 24p ortada göbekte" class="beri-alt-1 kenar-alt">
   <div data-gnl="23 kaplama ortada göbekte" data-ort="ger">
     <ul class="menü-genel" data-gnl="0 göbekte">
       <li><a href="https://data-deveb.github.io" class="logo">deveb</a></li>
